--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -8,10 +8,11 @@ a, button {
     //border: 1px solid #4274F6;
     //box-shadow: 0 2px #E9F1FE;
     // color: #4274F6;
-
+    cursor: pointer;
     text-decoration: none;
 
     &[disabled]{
+      cursor: not-allowed;
       color: #4B4B59;
       background-color: #D7D9D9;
       border-bottom: 3px solid #A4A6A6;
