--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -5,11 +5,10 @@ a, button {
     border: 0;
     border-top-right-radius: 3px;
     border-top-left-radius: 3px;
-    //border: 1px solid #4274F6;
-    //box-shadow: 0 2px #E9F1FE;
-    // color: #4274F6;
     cursor: pointer;
     text-decoration: none;
+
+    transition: background-color 0.25s ease-out, border-color 0.25s ease-out, color 0.25s ease-out;
 
     &[disabled]{
       cursor: not-allowed;
@@ -17,21 +16,25 @@ a, button {
       background-color: #D7D9D9;
       border-bottom: 3px solid #A4A6A6;
     }
+
+    &:hover,
+    &:focus,
+    &:active{
+      outline: 0;
+    }
   }
 
   &.Button--primary {
     background-color: #4274F6;
     color: #FAFCFC;
     border-bottom: 3px solid #345CC4;
-    //box-shadow: 0 3px #b1cbf2;
+
     &:hover,
     &:focus,
     &:active {
-      //outline: 0;
       background-color: #3B68DD;
       color: #FAFCFC;
       border-bottom: 3px solid #2E51AC;
-      //box-shadow: 0 3px 0 0 rgba(66,116,246,.5);
     }
   }
 
@@ -40,6 +43,7 @@ a, button {
     color: #4274F6;
     border: 1px solid #5481F6;
     border-bottom: 3px solid #677FF7;
+
     &:hover,
     &:focus,
     &:active {
@@ -54,6 +58,7 @@ a, button {
     background-color: #EB3B49;
     color: #FAFCFC;
     border-bottom: 3px solid #BC2F3A;
+
     &:hover,
     &:focus,
     &:active {
