--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -1,3 +1,5 @@
+@import "../fonts.less";
+
 a, button {
   &.Button {
     margin: 0 8px;
@@ -7,6 +9,8 @@ a, button {
     border-top-left-radius: 3px;
     cursor: pointer;
     text-decoration: none;
+    font-family: "Proxima Nova";
+    font-weight: 600;
 
     transition: background-color 0.25s ease-out, border-color 0.25s ease-out, color 0.25s ease-out;
 
@@ -75,19 +79,16 @@ a, button {
   &.Button--small {
     padding: 10px 15px 5px 15px;
     font-size: 10px;
-    /* TODO - font-weight */
   }
 
   &.Button--regular {
     padding: 15px 20px 10px 20px;
     font-size: 15px;
-    /* TODO - font-weight */
   }
 
   &.Button--large {
     padding: 20px 25px 15px 25px;
     font-size: 20px;
-    /* TODO - font-weight */
   }
 
 }
