--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -2,7 +2,7 @@
 
 a, button {
   &.Button {
-    margin: 0 8px;
+    margin: 0;
     background: #ffffff;
     border: 0;
     border-top-right-radius: 3px;
