--- a/src/fonts.less
+++ b/src/fonts.less
@@ -1,43 +1,27 @@
 @font-face {
   font-family: 'Proxima Nova';
-  src: url('../assets/fonts/ProximaNova-Bold-webfont.eot');
-  src: url('../assets/fonts/ProximaNova-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-       url('../assets/fonts/ProximaNova-Bold-webfont.woff') format('woff'),
-       url('../assets/fonts/ProximaNova-Bold-webfont.ttf') format('truetype'),
-       url('../assets/fonts/ProximaNova-Bold-webfont.svg#ProximaNovaRgBold') format('svg');
+  src: url('../assets/fonts/ProximaNova-Bold-webfont.woff');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Proxima Nova';
-  src: url('../assets/fonts/ProximaNova-Light-webfont.eot');
-  src: url('../assets/fonts/ProximaNova-Light-webfont.eot?#iefix') format('embedded-opentype'),
-       url('../assets/fonts/ProximaNova-Light-webfont.woff') format('woff'),
-       url('../assets/fonts/ProximaNova-Light-webfont.ttf') format('truetype'),
-       url('../assets/fonts/ProximaNova-Light-webfont.svg#ProximaNovaLtLight') format('svg');
+  src: url('../assets/fonts/ProximaNova-Light-webfont.woff');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Proxima Nova';
-  src: url('../assets/fonts/ProximaNova-Reg-webfont.eot');
-  src: url('../assets/fonts/ProximaNova-Reg-webfont.eot?#iefix') format('embedded-opentype'),
-       url('../assets/fonts/ProximaNova-Reg-webfont.woff') format('woff'),
-       url('../assets/fonts/ProximaNova-Reg-webfont.ttf') format('truetype'),
-       url('../assets/fonts/ProximaNova-Reg-webfont.svg#ProximaNovaRgRegular') format('svg');
+  src: url('../assets/fonts/ProximaNova-Reg-webfont.woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Proxima Nova';
-  src: url('../assets/fonts/ProximaNova-Sbold-webfont.eot');
-  src: url('../assets/fonts/ProximaNova-Sbold-webfont.eot?#iefix') format('embedded-opentype'),
-       url('../assets/fonts/ProximaNova-Sbold-webfont.woff') format('woff'),
-       url('../assets/fonts/ProximaNova-Sbold-webfont.ttf') format('truetype'),
-       url('../assets/fonts/ProximaNova-Sbold-webfont.svg#ProximaNovaLtSemibold') format('svg');
+  src: url('../assets/fonts/ProximaNova-Sbold-webfont.woff');
   font-weight: 600;
   font-style: normal;
 }
