add margin to buttons

--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -10,6 +10,7 @@ a, button {
     text-decoration: none;
     font-family: "Proxima Nova";
     font-weight: 600;
+    margin-right: 10px;
 
     transition: background-color 0.25s ease-out, border-color 0.25s ease-out, color 0.25s ease-out;
 
