--- a/src/Modal/Modal.less
+++ b/src/Modal/Modal.less
@@ -15,7 +15,6 @@
 }
 
 .Modal--window {
-  top: 50%;
   left: 50%;
   margin-top: 60px;
   position: fixed;
@@ -29,4 +28,5 @@
   width: 100%;
   height: 100%;
   padding: 35px 45px;
+  box-sizing: border-box;
 }
