Add link button style and type=button

--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -75,6 +75,18 @@ a, button {
     }
   }
 
+  &.Button--link {
+    background-color: none;
+    color: #4274F6;
+
+    &:hover,
+    &:focus,
+    &:active {
+      background-color: none;
+      color: #345CC4;
+    }
+  }
+
   &.Button--small {
     padding: 10px 15px 5px 15px;
     font-size: 10px;
