Fix link background color

--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -76,13 +76,13 @@ a, button {
   }
 
   &.Button--link {
-    background-color: none;
+    background-color: transparent;
     color: #4274F6;
 
     &:hover,
     &:focus,
     &:active {
-      background-color: none;
+      background-color: transparent;
       color: #345CC4;
     }
   }
