--- a/src/Modal/Modal.less
+++ b/src/Modal/Modal.less
@@ -24,19 +24,24 @@
   -webkit-transform: translateY(-50%);
   position: fixed;
   background: #fff;
-  border: 6px solid #3b4349;
   border-radius: 4px;
   font-family: "Proxima Nova";
+  box-shadow: 0 10px 10px rgba(0,0,0,.2);
 }
 
 .Modal--header{
-  height: 70px;
-  padding: 35px 45px 10px;
+  height: 80px;
+  padding: 0 45px 10px;
   box-sizing: border-box;
+  background: #F4F8FF;
+  border-radius: 4px;
 
   h2{
     padding: 0;
     margin: 0;
+    padding-top: 28px;
+    color: #23506E;
+    font-family: "ProximaNovaLtLight";
   }
 }
 
@@ -44,21 +49,25 @@
   display: block;
   position: absolute;
   cursor: pointer;
-  width: 16px;
-  height: 16px;
+  height: 20px;
+  width: 20px;
   background: url(./close.png);
-  right: 10px;
-  top: 10px;
+  right: 32px;
+  top: 30px;
   outline: none;
   border: none;
   padding: 0;
   margin: 0;
+  opacity: 0.6;
+  &:hover {
+    opacity: 0.8;
+  }
 }
 
 .Modal--window--content {
   position: relative;
-  padding: 35px 45px;
+  padding: 15px 35px 25px;
   padding-top: 15px;
-  overflow-y: scroll;
+  overflow-y: none;
   box-sizing: border-box;
 }
