--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -21,6 +21,7 @@ a, button {
       color: #4B4B59;
       background-color: #D7D9D9;
       border: none;
+      border: 1px solid #D7D9D9;
       border-bottom: 3px solid #A4A6A6;
     }
 
@@ -34,6 +35,7 @@ a, button {
   &.Button--primary {
     background-color: #4274F6;
     color: #FAFCFC;
+    border: 1px solid #4274F6;
     border-bottom: 3px solid #345CC4;
 
     &:hover,
@@ -41,6 +43,7 @@ a, button {
     &:active {
       background-color: #3B68DD;
       color: #FAFCFC;
+      border: 1px solid #3B68DD;
       border-bottom: 3px solid #2E51AC;
     }
   }
@@ -64,6 +67,7 @@ a, button {
   &.Button--destructive {
     background-color: #EB3B49;
     color: #FAFCFC;
+    border: 1px solid #EB3B49;
     border-bottom: 3px solid #BC2F3A;
 
     &:hover,
@@ -71,6 +75,7 @@ a, button {
     &:active {
       background-color: #D33541;
       color: #FAFCFC;
+      border: 1px solid #D33541;
       border-bottom: 3px solid #A42933;
     }
   }
