fix line height weird issue

--- a/src/TextInput/TextInput.less
+++ b/src/TextInput/TextInput.less
@@ -43,7 +43,7 @@
     border: 0px solid;
     width: 100%;
     line-height: 40px;
-    height:40px;
+    min-height:40px;
     padding-top: 10px;
     background-color: transparent;
   }
@@ -52,7 +52,7 @@
     label { opacity: 0 !important; }
     .TextInput--input {
       line-height: 40px;
-      height:40px;
+      min-height:40px;
       color: #566279;
       font-size: 12px;
       padding-top: 5px;
