--- a/src/Modal/Modal.less
+++ b/src/Modal/Modal.less
@@ -11,9 +11,8 @@
   width: 100%;
   top: 0;
   left: 0;
-  background: #000;
+  background: #191926;
   opacity: 0.6;
-  filter: alpha(opacity=60);
 }
 
 .Modal--window {
@@ -23,25 +22,27 @@
   transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
   position: fixed;
-  background: #fff;
-  border-radius: 4px;
+  border-radius: 3px;
   font-family: "Proxima Nova";
   box-shadow: 0 10px 10px rgba(0,0,0,.2);
+  border: 1px solid #FAFCFC;
+  background: #FAFCFC;
 }
 
 .Modal--header{
-  height: 80px;
-  padding: 0 45px 10px;
+  background: #E3E6EB;
+  height: 60px;
+  padding: 15px 30px;
   box-sizing: border-box;
-  background: #F4F8FF;
-  border-radius: 4px;
 
   h2{
     padding: 0;
     margin: 0;
-    padding-top: 28px;
-    color: #23506E;
-    font-family: "ProximaNovaLtLight";
+    font-size: 22px;
+    line-height: 30px;
+    font-weight: 500;
+    color: #121212;
+    font-family: "Proxima Nova";
   }
 }
 
@@ -49,16 +50,17 @@
   display: block;
   position: absolute;
   cursor: pointer;
-  height: 20px;
-  width: 20px;
+  height: 12px;
+  width: 12px;
   background: url(./close.png);
+  background-size: 12px 12px;
   right: 32px;
-  top: 30px;
+  top: 24px;
   outline: none;
   border: none;
   padding: 0;
   margin: 0;
-  opacity: 0.6;
+  opacity: 0.4;
   &:hover {
     opacity: 0.8;
   }
@@ -66,8 +68,25 @@
 
 .Modal--window--content {
   position: relative;
-  padding: 15px 35px 25px;
-  padding-top: 15px;
+  padding: 30px 30px 25px;
+  background-color: #FAFCFC;
   overflow-y: none;
   box-sizing: border-box;
+  font-weight: 18px;
+
+  p {
+    margin-top: 0;
+    margin-bottom: 15px;
+  }
+}
+
+.Modal footer {
+  margin-top: 40px;
+  text-align: right;
+  .Button {
+    margin-right: 20px;
+  }
+  .Button:last-child {
+    margin-right: 0;
+  }
 }
