Fix scrolling behavior

--- a/src/Modal/Modal.less
+++ b/src/Modal/Modal.less
@@ -42,7 +42,7 @@
     line-height: 30px;
     font-weight: 500;
     color: #121212;
-    font-family: "Proxima Nova";
+    font-family: "Proxima Nova", Arial, sans-serif;
   }
 }
 
@@ -70,9 +70,7 @@
   position: relative;
   padding: 30px 30px 25px;
   background-color: #FAFCFC;
-  overflow-y: none;
   box-sizing: border-box;
-  font-weight: 18px;
 
   p {
     margin-top: 0;
