Remove need for ref

--- a/src/Modal/Modal.less
+++ b/src/Modal/Modal.less
@@ -71,6 +71,7 @@
   padding: 30px 30px 25px;
   background-color: #FAFCFC;
   box-sizing: border-box;
+  overflow-y: auto;
 
   p {
     margin-top: 0;
