make width in input component follow parent component

--- a/src/TextInput/TextInput.less
+++ b/src/TextInput/TextInput.less
@@ -9,7 +9,7 @@
   box-sizing: border-box;
   border: 1px solid #E3E6EB;
   height: 50px;
-  width: 300px;
+  width: 100%;
   font-family: "Proxima Nova";
 
   .TextInput--infoRow {
