Update styles, default enableCopy=true

--- a/src/TextInput/TextInput.less
+++ b/src/TextInput/TextInput.less
@@ -114,4 +114,9 @@
     outline: none;
     text-decoration: underline;
   }
+
+  // Hides the IE copy and clear buttons
+  input::-ms-reveal, input::-ms-clear {
+    display: none;
+  }
 }
