--- a/src/TextInput/TextInput.less
+++ b/src/TextInput/TextInput.less
@@ -81,8 +81,8 @@
 
   &.TextInput--readonly {
     color: #191926;
-    background: transparent;
-    border: 1px solid transparent;
+    background: rgba(255,255,255,0.5);
+    border: 1px solid rgba(226,230,235,0.5);
   }
 
   textarea:focus, input:focus{
