address pr comments

--- a/src/SegmentedControl/SegmentedControl.less
+++ b/src/SegmentedControl/SegmentedControl.less
@@ -17,11 +17,11 @@
       background-color: #4274F6;
       color: #FAFAFC;
     }
+    &:first-child {
+      border-left: none;
+    }
   }
   border: 1px solid #E3E6EB;
   border-radius: 3px;
 }
 
-.SegmentedControl:first-child {
-  border-left: none;
-}
