Add make styles command

--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -26,7 +26,7 @@ a, button {
       &.Button--link {
         background: none;
         border: none;
-        color: @neutral_gray;
+        color: @DS_neutral_gray;
       }
     }
 
