--- a/src/SegmentedControl/SegmentedControl.less
+++ b/src/SegmentedControl/SegmentedControl.less
@@ -1,8 +1,8 @@
 .segmented_control {
   .segmented_control--selectable-item {
-    background-color: @neutral_white;
-    border: 1px solid @neutral_silver;
-    color: @neutral_dark_gray;
+    background-color: @DS_neutral_white;
+    border: 1px solid @DS_neutral_silver;
+    color: @DS_neutral_dark_gray;
     cursor: pointer;
     display: inline-block;
     font-family: "Proxima Nova";
@@ -27,8 +27,8 @@
     &:hover,
     &:focus,
     &:active {
-      background-color: @neutral_off_white;
-      border-color: @primary_blue;
+      background-color: @DS_neutral_off_white;
+      border-color: @DS_primary_blue;
       outline: none;
       position: relative;
       // Pop up on top of peers to expose overlapped borders.
@@ -36,25 +36,25 @@
     }
 
     &.segmented_control--selectable-item--selected {
-      background-color: @primary_blue;
-      border-color: @primary_blue;
-      color: @neutral_off_white;
+      background-color: @DS_primary_blue;
+      border-color: @DS_primary_blue;
+      color: @DS_neutral_off_white;
       position: relative;
       // Pop up on top of peers to expose overlapped borders.
       z-index: 2;
     }
 
     &.segmented_control--selectable-item--disabled {
-      background-color: @neutral_off_white;
+      background-color: @DS_neutral_off_white;
       border-color: #d7d9d9;
-      border-color: @neutral_silver;
+      border-color: @DS_neutral_silver;
       color: #d7d9d9;
-      color: @neutral_gray;
+      color: @DS_neutral_gray;
       cursor: not-allowed;
 
       &.segmented_control--selectable-item--selected {
-        background-color: @neutral_silver;
-        color: @neutral_dark_gray;
+        background-color: @DS_neutral_silver;
+        color: @DS_neutral_dark_gray;
       }
     }
   }
