--- a/src/less/index.less
+++ b/src/less/index.less
@@ -6,10 +6,10 @@
 @import "./fonts.less";
 
 // Component Modules
-@import "./src/Button/Button";
-@import "./src/ConfirmationButton/ConfirmationButton";
-@import "./src/SegmentedControl/SegmentedControl";
-@import "./src/TextInput/TextInput";
-@import "./src/CopyableInput/CopyableInput";
-@import "./src/Modal/Modal";
+@import "../Button/Button";
+@import "../ConfirmationButton/ConfirmationButton";
+@import "../SegmentedControl/SegmentedControl";
+@import "../TextInput/TextInput";
+@import "../CopyableInput/CopyableInput";
+@import "../Modal/Modal";
 
