--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -4,12 +4,22 @@
 
 
 // Primary colors:
-@primary_blue: #4274f6;
+@DS_primary_blue: #4274f6;
 
 // Neutral colors:
-@neutral_black: #191926;
-@neutral_dark_gray: #566279;
-@neutral_gray: #b5bcca;
-@neutral_off_white: #fafafc;
-@neutral_silver: #e3e6eb;
-@neutral_white: #fff;
+@DS_neutral_black: #191926;
+@DS_neutral_dark_gray: #566279;
+@DS_neutral_gray: #b5bcca;
+@DS_neutral_off_white: #fafafc;
+@DS_neutral_silver: #e3e6eb;
+@DS_neutral_white: #fff;
+
+// Alert colors:
+@DS_green: #01D59A;
+@DS_orange: #FCA53A;
+@DS_red: #EB3B49;
+
+// Secondary colors:
+@DS_aqua: #33F7F1;
+@DS_pink: #E838BF;
+@DS_purple: #7E1DFF;
