Enable usage of SegmentedControl as a controlled component.
[https://fb.me/react-controlled-components]
- Add a `value` prop that overrides the selected value.
- Requires `onSelect` to be specified; throws an error otherwise.
- Also requires only one of `value` or `defaultValue` to be specified.

--- a/src/SegmentedControl/SegmentedControl.less
+++ b/src/SegmentedControl/SegmentedControl.less
@@ -32,6 +32,7 @@
     &:active {
       background-color: @neutral_off_white;
       border-color: @primary_blue;
+      outline: none;
       position: relative;
       // Pop up on top of peers to expose overlapped borders.
       z-index: 1;
