--- a/src/Table/Cell.less
+++ b/src/Table/Cell.less
@@ -1,5 +1,13 @@
 .Table--cell {
-  padding: 20px 20px;
+  padding: 20px 10px;
+
+  &:first-child {
+    padding-left: 20px;
+  }
+
+  &:last-child {
+    padding-right: 20px;
+  }
 }
 
 .Table--cell--no_wrap {
