Allow selects to be marked as disabled

--- a/src/Select/Select.less
+++ b/src/Select/Select.less
@@ -29,6 +29,12 @@
       transition: box-shadow .25s ease-out;
     }
 
+    &.is-disabled {
+      .Select-control {
+        background-color: @neutral_silver;
+      }
+    }
+
     &.Select--multi {
       .Select-control {
         .Select-multi-value-wrapper {
