adding grid and type size to index

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,9 +1,11 @@
 // Clever Styles
-// Version 0.6.1
+// Version 0.6.2
 
 // Color and font variables
 @import "./colors.less";
 @import "./fonts.less";
+@import "./type-size.less";
+@import "./grid.less";
 
 // Component Modules
 @import "../Button/Button";
