[Table] Add a pagination footer with default 10 rows per page.

--- a/src/Table/Table.less
+++ b/src/Table/Table.less
@@ -15,6 +15,12 @@
   }
 }
 
+.Table--no_data_cell {
+  color: @neutral_gray;
+  font-size: 1rem;
+  text-align: center;
+}
+
 .Table--body {
   .Table--row {
     &:nth-child(even) {
