Turn Footer into stateless component.

--- a/src/Table/Footer.less
+++ b/src/Table/Footer.less
@@ -40,6 +40,6 @@
 .Table--footer--ellipsis {
   color: @primary_blue;
   cursor: default;
+  font-size: 1rem;
   margin: @pageNumberMargin;
-  vertical-align: middle;
 }
