Update less imports

--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -4,22 +4,22 @@
 
 
 // Primary colors:
-@DS_primary_blue: #4274f6;
+@primary_blue: #4274f6;
 
 // Neutral colors:
-@DS_neutral_black: #191926;
-@DS_neutral_dark_gray: #566279;
-@DS_neutral_gray: #b5bcca;
-@DS_neutral_silver: #e3e6eb;
-@DS_neutral_off_white: #fafafc;
-@DS_neutral_white: #fff;
+@neutral_black: #191926;
+@neutral_dark_gray: #566279;
+@neutral_gray: #b5bcca;
+@neutral_silver: #e3e6eb;
+@neutral_off_white: #fafafc;
+@neutral_white: #fff;
 
 // Alert colors:
-@DS_green: #01D59A;
-@DS_orange: #FCA53A;
-@DS_red: #EB3B49;
+@green: #01D59A;
+@orange: #FCA53A;
+@red: #EB3B49;
 
 // Secondary colors:
-@DS_aqua: #33F7F1;
-@DS_pink: #E838BF;
-@DS_purple: #7E1DFF;
+@aqua: #33F7F1;
+@pink: #E838BF;
+@purple: #7E1DFF;
