--- a/src/less/type-size.less
+++ b/src/less/type-size.less
@@ -1,38 +1,38 @@
 // Type Sizes from clever/design-system.
 
 // Type Size Variables
-@DS_type_tiny: .625rem;
-@DS_type_small: .75rem;
-@DS_type_medium: 1rem;
-@DS_type_large: 1.5rem;
-@DS_type_huge: 2rem;
-@DS_type_gargantuan: 2.5rem;
-@DS_type_colossal: 4rem;
+@type_tiny: .625rem;
+@type_small: .75rem;
+@type_medium: 1rem;
+@type_large: 1.5rem;
+@type_huge: 2rem;
+@type_gargantuan: 2.5rem;
+@type_colossal: 4rem;
 
 .type_tiny {
-	font-size: @DS_type_tiny;
+	font-size: @type_tiny;
 }
 
 .type_small {
-	font-size: @DS_type_small;
+	font-size: @type_small;
 }
 
 .type_medium {
-	font-size: @DS_type_medium;
+	font-size: @type_medium;
 }
 
 .type_large {
-	font-size: @DS_type_large;
+	font-size: @type_large;
 }
 
 .type_huge {
-	font-size: @DS_type_huge;
+	font-size: @type_huge;
 }
 
 .type_gargantuan {
-	font-size: @DS_type_gargantuan;
+	font-size: @type_gargantuan;
 }
 
 .type_colossal {
-	font-size: @DS_type_colossal;
+	font-size: @type_colossal;
 }
