--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -1,3 +1,6 @@
+@import "../less/colors.less";
+@import "../less/fonts.less";
+
 a, button {
   &.Button {
     background: #ffffff;
@@ -26,7 +29,7 @@ a, button {
       &.Button--link {
         background: none;
         border: none;
-        color: @DS_neutral_gray;
+        color: @neutral_gray;
       }
     }
 
