--- a/src/Table/Table.less
+++ b/src/Table/Table.less
@@ -1,5 +1,5 @@
-@import "../colors.less";
-@import "../fonts.less";
+@import "../less/colors.less";
+@import "../less/fonts.less";
 
 .Table {
   border: 1px solid @neutral_silver;
