--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -1,27 +1,27 @@
 @font-face {
   font-family: 'Proxima Nova';
-  src: url('../assets/fonts/ProximaNova-Bold-webfont.woff');
+  src: url('../../assets/fonts/ProximaNova-Bold-webfont.woff');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Proxima Nova';
-  src: url('../assets/fonts/ProximaNova-Light-webfont.woff');
+  src: url('../../assets/fonts/ProximaNova-Light-webfont.woff');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Proxima Nova';
-  src: url('../assets/fonts/ProximaNova-Reg-webfont.woff');
+  src: url('../../assets/fonts/ProximaNova-Reg-webfont.woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Proxima Nova';
-  src: url('../assets/fonts/ProximaNova-Sbold-webfont.woff');
+  src: url('../../assets/fonts/ProximaNova-Sbold-webfont.woff');
   font-weight: 600;
   font-style: normal;
 }
