--- a/src/less/index.less
+++ b/src/less/index.less
@@ -14,3 +14,9 @@
 @import "../TextInput/TextInput";
 @import "../CopyableInput/CopyableInput";
 @import "../Modal/Modal";
+@import "../Select/Select";
+
+@import "../Table/Table";
+@import "../Table/HeaderCell";
+@import "../Table/Cell";
+@import "../Table/Footer";
