--- a/src/less/index.less
+++ b/src/less/index.less
@@ -4,6 +4,8 @@
 // Color and font variables
 @import "./colors.less";
 @import "./fonts.less";
+@import "./sizing.less";
+@import "./spacing.less";
 @import "./type-size.less";
 @import "./grid.less";
 
