--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -1,34 +1,50 @@
-@import "../less/colors.less";
 @import "../less/fonts.less";
+@import (reference) "../less/colors.less";
+@import (reference) "../less/sizing.less";
+@import (reference) "../less/type-size.less";
+
+
+.buttonColor(@backgroundColor: @primary_blue) {
+  background-color: @backgroundColor;
+  border-color: @backgroundColor;
+  .shade(border-bottom-color, @backgroundColor, 2);
+
+  &:not([disabled]) {
+    &:hover,
+    &:focus,
+    &:active {
+      .shade(background-color, @backgroundColor, 2);
+      .shade(border-color, @backgroundColor, 2);
+      .shade(border-bottom-color, @backgroundColor, 4);
+    }
+  }
+}
 
 a, button {
   &.Button {
-    background: #ffffff;
-    border: 0;
-    border-top-right-radius: 3px;
-    border-top-left-radius: 3px;
+    .type_medium;
+    border-radius: 3px 3px 0 0;
+    border: 1px solid transparent;
+    border-bottom-width: 3px;
+    box-sizing: border-box;
     cursor: pointer;
-    text-decoration: none;
     font-family: "Proxima Nova";
     font-weight: 600;
-
+    text-decoration: none;
     transition: background-color 0.25s ease-out, border-color 0.25s ease-out, color 0.25s ease-out;
 
     &[disabled],
     &[disabled]:hover,
     &[disabled]:focus
     &[disabled]:active {
+      .buttonColor(@neutral_silver);
       cursor: not-allowed;
-      color: #4B4B59;
-      background-color: #D7D9D9;
-      border: none;
-      border: 1px solid #D7D9D9;
-      border-bottom: 3px solid #A4A6A6;
+      color: @neutral_dark_gray;
 
       &.Button--linkPlain,
       &.Button--link {
         background: none;
-        border: none;
+        border: transparent;
         color: @neutral_gray;
       }
     }
@@ -41,83 +57,56 @@ a, button {
   }
 
   &.Button--primary {
-    background-color: #4274F6;
-    color: #FAFCFC;
-    border: 1px solid #4274F6;
-    border-bottom: 3px solid #345CC4;
-
-    &:hover,
-    &:focus,
-    &:active {
-      background-color: #3B68DD;
-      color: #FAFCFC;
-      border: 1px solid #3B68DD;
-      border-bottom: 3px solid #2E51AC;
-    }
+    .buttonColor(@primary_blue);
+    color: @neutral_off_white;
   }
 
   &.Button--secondary {
-    background-color: #FAFCFC;
-    color: #4274F6;
-    border: 1px solid #5481F6;
-    border-bottom: 3px solid #677FF7;
+    background-color: @neutral_off_white;
+    border-color: @primary_blue;
+    color: @primary_blue;
 
     &:hover,
     &:focus,
     &:active {
-      background-color: #FAFCFC;
-      color: #345CC4;
-      border: 1px solid #345CC4;
-      border-bottom: 3px solid #345CC4;
+      .shade(border-color, @primary_blue, 2);
+      .shade(color, @primary_blue, 2);
     }
   }
 
   &.Button--destructive {
-    background-color: #EB3B49;
-    color: #FAFCFC;
-    border: 1px solid #EB3B49;
-    border-bottom: 3px solid #BC2F3A;
-
-    &:hover,
-    &:focus,
-    &:active {
-      background-color: #D33541;
-      color: #FAFCFC;
-      border: 1px solid #D33541;
-      border-bottom: 3px solid #A42933;
-    }
+    .buttonColor(@alert_red);
+    color: @neutral_off_white;
   }
 
   &.Button--linkPlain,
   &.Button--link {
-    background-color: transparent;
-    color: #4274F6;
+    color: @primary_blue;
 
     &:hover,
     &:focus,
     &:active {
-      background-color: transparent;
-      color: #345CC4;
+      .shade(color, @primary_blue, 2);
     }
   }
 
   &.Button--small {
-    padding: 10px 15px 5px 15px;
-    font-size: 10px;
+    .type_small;
+    padding: @size_xs @size_s @size_2xs;
   }
 
   &.Button--regular {
-    padding: 15px 20px 10px 20px;
-    font-size: 15px;
+    padding: @size_s @size_m @size_xs;
   }
 
   &.Button--large {
-    padding: 20px 25px 15px 25px;
-    font-size: 20px;
+    .type_large;
+    padding: @size_m @size_l @size_s;
   }
 
   &.Button--linkPlain {
-    font-size: 1em;
+    border: none;
+    font-size: 1em;  /* Match surrounding text. */
     margin: 0;
     padding: 0;
   }
