Fix link and linkPlain button backgrounds.

--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -81,6 +81,8 @@ a, button {
 
   &.Button--linkPlain,
   &.Button--link {
+    background: none;
+    border: transparent;
     color: @primary_blue;
 
     &:hover,
