Add .tint mixin to complement .shade

--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -24,3 +24,6 @@
 .shade(@property, @color, @steps: 1) {
   @{property}: shade(@color, @shadeStepAmount * @steps);
 }
+.tint(@property, @color, @steps: 1) {
+  @{property}: tint(@color, @shadeStepAmount * @steps);
+}
