[Select] Fix incorrect `value` propType and enable searching.

--- a/src/Select/Select.less
+++ b/src/Select/Select.less
@@ -61,12 +61,19 @@
       border-radius: 0px;
       border-color: @neutral_silver;
       height: 50px;
+
       .Select-placeholder {
         font-size: .75rem;
         line-height: 40px;
         padding-top: 5px;
         text-transform: uppercase;
       }
+
+      .Select-input {
+        position: absolute;
+      }
+
+      .Select-input,
       .Select-value {
         font-size: 1rem;
         line-height: 40px;
