added type utilities to be used as mixins or classes in the stylesheet

--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -25,3 +25,17 @@
   font-weight: 600;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('../../assets/fonts/ProximaNova-RegItalic-webfont.woff');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('../../assets/fonts/ProximaNova-Black-webfont.woff');
+  font-weight: 900;
+  font-style: normal;
+}
