--- a/src/less/index.less
+++ b/src/less/index.less
@@ -8,6 +8,7 @@
 @import "./spacing.less";
 @import "./type-size.less";
 @import "./grid.less";
+@import	"./type-utilities.less";
 
 // Component Modules
 @import "../Button/Button";
