--- a/src/less/type-utilities.less
+++ b/src/less/type-utilities.less
@@ -1,7 +1,4 @@
-
 @import (reference) "./fonts.less";
-
-/* Basscss Typography */
 
 .font-family-inherit { font-family: inherit }
 
@@ -10,47 +7,42 @@
 .text--decoration-none { text-decoration: none }
 
 .text--semi-bold    {
-   font-family: 'Proxima Nova', 'Helvetica Neue', Helvetica, sans-serif;
    font-weight: 400;
    font-style: normal;
 }
 
 .text--bold    {
-   font-family: 'Proxima Nova', 'Helvetica Neue', Helvetica, sans-serif;
    font-weight: bold;
    font-style: normal;
 }
 
 .text--regular { 
-   font-family: 'Proxima Nova', 'Helvetica Neue', Helvetica, sans-serif;
    font-weight: normal;
    font-style: normal;
 }
 
 .text--italic  {
-   font-family: 'Proxima Nova', 'Helvetica Neue', Helvetica, sans-serif;
    font-weight: normal;
    font-style: italic;
 }
 
 .text--heavy {
-   font-family: 'Proxima Nova', 'Helvetica Neue', Helvetica, sans-serif;
    font-weight: 900;
    font-style: normal;
 }
 
 .text--caps    {
-	text-transform: uppercase;
-	letter-spacing: .2em;
+  text-transform: uppercase;
+  letter-spacing: .2em;
 }
 
-.text--left-align   { text-align: left }
+.text--left { text-align: left }
 
-.text--center       { text-align: center }
+.text--center { text-align: center }
 
-.text--right-align  { text-align: right }
+.text--right { text-align: right }
 
-.text--justify      { text-align: justify }
+.text--justify { text-align: justify }
 
 .text--nowrap { white-space: nowrap }
 
