creating a z-index set of variables

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -10,6 +10,7 @@
 @import "./spacing.less";
 @import "./type-size.less";
 @import "./type-utilities.less";
+@import "./z-index.less";
 
 // Component Modules
 @import "../Button/Button";
