--- a/src/less/index.less
+++ b/src/less/index.less
@@ -2,6 +2,7 @@
 // Version 0.6.2
 
 // Color and font variables
+@import "./border.less";
 @import "./colors.less";
 @import "./flex.less";
 @import "./fonts.less";
