--- a/src/less/type-utilities.less
+++ b/src/less/type-utilities.less
@@ -7,7 +7,7 @@
 .text--decoration-none { text-decoration: none }
 
 .text--light {
-   font-weight: 200;;
+   font-weight: 200;
    font-style: normal;
 }
 
@@ -74,4 +74,5 @@
 .list-reset {
   list-style: none;
   padding-left: 0;
+  margin: 0;
 }
