replacing all type_size mixins with type--size

--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -22,7 +22,7 @@
 
 a, button {
   &.Button {
-    .type_medium;
+    .text--medium;
     border-radius: 3px 3px 0 0;
     border: 1px solid transparent;
     border-bottom-width: 3px;
@@ -93,7 +93,7 @@ a, button {
   }
 
   &.Button--small {
-    .type_small;
+    .text--small;
     padding: @size_xs @size_s @size_2xs;
   }
 
@@ -102,7 +102,7 @@ a, button {
   }
 
   &.Button--large {
-    .type_large;
+    .text--large;
     padding: @size_m @size_l @size_s;
   }
 
