--- a/src/less/type-size.less
+++ b/src/less/type-size.less
@@ -2,7 +2,7 @@
 @import (reference) "./sizing.less";
 
 
-// Type Size Variables
+// Type Size Variables 
 @type_tiny: .625rem;
 @type_small: @size_s;
 @type_medium: @size_m;
@@ -11,30 +11,30 @@
 @type_gargantuan: @size_2xl;
 @type_colossal: @size_5xl;
 
-.type_tiny {
+.text--tiny {
 	font-size: @type_tiny;
 }
 
-.type_small {
+.text--small {
 	font-size: @type_small;
 }
 
-.type_medium {
+.text--medium {
 	font-size: @type_medium;
 }
 
-.type_large {
+.text--large {
 	font-size: @type_large;
 }
 
-.type_huge {
+.text--huge {
 	font-size: @type_huge;
 }
 
-.type_gargantuan {
+.text--gargantuan {
 	font-size: @type_gargantuan;
 }
 
-.type_colossal {
+.text--colossal {
 	font-size: @type_colossal;
 }
