--- a/docs/GridExample.less
+++ b/docs/GridExample.less
@@ -46,7 +46,7 @@
     .justifyContent(center);
     .outlined;
     .tint(color, @accent_purple, 2);
-    .type_medium;
+    .text--medium;
     background-color: @neutral_silver;
     font-size: 0.875rem;
     font-family: Menlo, Monaco, Consolas, Courier New, monospace;
