add z-index variables instead of set values

--- a/src/less/z-index.less
+++ b/src/less/z-index.less
@@ -3,42 +3,53 @@
 /* z-index issues.
 /*****************************/
 
+@zIndex_0: 0;
+@zIndex_1: 100;
+@zIndex_2: 200;
+@zIndex_3: 300;
+@zIndex_4: 400;
+@zIndex_5: 500;
+@zIndex_6: 600;
+@zIndex_7: 700;
+@zIndex_8: 800;
+@zIndex_9: 900;
+
 .zIndex--0 {
-	z-index: 0;
+	z-index: @zIndex_0;
 }
 
 .zIndex--1 {
-  z-index: 100;
+  z-index: @zIndex_1;
 }
 
 .zIndex--2 {
-  z-index: 200;
+  z-index: @zIndex_2;
 }
 
 .zIndex--3 {
-  z-index: 300;
+  z-index: @zIndex_3;
 }
 
 .zIndex--4 {
-  z-index: 400;
+  z-index: @zIndex_4;
 }
 
 .zIndex--5 {
-  z-index: 500;
+  z-index: @zIndex_5;
 }
 
 .zIndex--6 {
-  z-index: 600;
+  z-index: @zIndex_6;
 }
 
 .zIndex--7 {
-  z-index: 700;
+  z-index: @zIndex_7;
 }
 
 .zIndex--8 {
-  z-index: 800;
+  z-index: @zIndex_8;
 }
 
 .zIndex--9 {
-  z-index: 900;
+  z-index: @zIndex_9;
 }
