Add border.less and border_radius.less definitions and mixins.
Replace a few relevant style rules as proof-of-concept.

--- a/docs/TabBarExample.less
+++ b/docs/TabBarExample.less
@@ -29,12 +29,12 @@ h4.TabBarExample--configLabel {
 }
 
 .TabBarExample--ViewContainer {
+  .border--s(@neutral_silver);
+  .borderRadius--m;
   .margin--top--m;
   .margin--x--m;
   .padding--x--l;
   background-color: @neutral_off_white;
-  border: @borderWidthSmall solid @neutral_silver;
-  border-radius: @borderRadiusMedium;
   height: 15rem;
   min-width: 37.5rem;
 }
