--- a/src/TabBar/Tab.less
+++ b/src/TabBar/Tab.less
@@ -5,6 +5,7 @@
 .TabBar--Tab {
   background: none;
   border: 0;
+  .border--bottom--m(transparent);
   border-bottom: @tabBorderWidthMedium solid transparent;
   box-sizing: border-box;
   color: @neutral_dark_gray;
