--- a/src/less/spacing.less
+++ b/src/less/spacing.less
@@ -2,7 +2,7 @@
  * Common spacing definitions.
  *
  * Auto-generated file.
- * To re-generate, run `sizing-styles`
+ * To re-generate, run `make sizing-styles`
  */
 @import (reference) "./sizing.less";
 
