--- a/docs/FlexExample.less
+++ b/docs/FlexExample.less
@@ -14,9 +14,9 @@
 
   .FlexExample--box,
   .FlexExample--item {
+    .border--s(shade(@neutral_silver, 10%));
     .padding--m;
     background-color: fadeout(@neutral_gray, 90%);
-    border: @borderWidthSmall solid shade(@neutral_silver, 10%);
     border-radius: 0;
     box-sizing: border-box;
     font-size: 0.875rem;
