--- a/src/TabBar/defs.less
+++ b/src/TabBar/defs.less
@@ -1,5 +1,5 @@
 @import (reference) "../less/index";
 
-@tabBorderWidthSmall: @borderWidthMedium;
-@tabBorderWidthMedium: @borderWidthLarge;
-@tabBorderWidthLarge: @borderWidthLarge;
+@tabBorderWidthSmall: @borderWidthM;
+@tabBorderWidthMedium: @borderWidthL;
+@tabBorderWidthLarge: @borderWidthL;
