--- a/docs/TabBarExample.less
+++ b/docs/TabBarExample.less
@@ -9,13 +9,13 @@
   }
 
   code {
-    .type_medium;
+    .text--medium;
     color: @neutral_gray;
     font-weight: normal;
   }
 
   h2 {
-    .type_large;
+    .text--large;
   }
 }
 
