--- a/src/TabBar/TabBar.less
+++ b/src/TabBar/TabBar.less
@@ -3,16 +3,16 @@
 
 
 .TabBar--small {
-  .type_small;
+  .text--small;
   box-shadow: inset 0 -@tabBorderWidthSmall @neutral_silver;
 }
 
 .TabBar--medium {
-  .type_medium;
+  .text--medium;
   box-shadow: inset 0 -@tabBorderWidthMedium @neutral_silver;
 }
 
 .TabBar--large {
-  .type_large;
+  .text--large;
   box-shadow: inset 0 -@tabBorderWidthLarge @neutral_silver;
 }
