LeftNav: some styling

--- a/src/LeftNav/LeftNav.less
+++ b/src/LeftNav/LeftNav.less
@@ -1,11 +1,6 @@
-.LeftNav {
- /*
-    Use namespaced classes that begin with "LeftNav"
-    to avoid clashing with global styles. If possible, avoid
-    over-nesting selectors and instead use clear class names
-    that convey the purpose and/or state of the element:
+@import (reference) "../less/index.less";
 
-    .LeftNav--container
-    .LeftNav--input-disabled
- */
+.LeftNav {
+  color: @neutral_black;
+  background: @neutral_silver;
 }
