[TabBar] Add new TabBar component.  (#68)
* Add MorePropTypes utility for common custom prop validator patterns.

* [TabBar] Add new TabBar component.

Basically a row-direction FlexBox with buttons/anchors as child items.

* [TabBar] Add demo for the new TabBar component.

* [TabBar] Update README.

* Fix pre-existing lint issues from FlexBox PR.

* Add border.less and border_radius.less definitions and mixins.

Replace a few relevant style rules as proof-of-concept.

* 0.15.1

* s/type_.*/text--/g

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,7 +1,9 @@
 // Clever Styles
 // Version 0.6.2
 
-// Color and font variables
+// Common constant, class and mixin definitions
+@import "./border.less";
+@import "./border_radius.less";
 @import "./colors.less";
 @import "./flex.less";
 @import "./fonts.less";
