--- a/src/less/z-index.less
+++ b/src/less/z-index.less
@@ -3,53 +3,53 @@
 /* z-index issues.
 /*****************************/
 
-@zIndex_0: 0;
-@zIndex_1: 100;
-@zIndex_2: 200;
-@zIndex_3: 300;
-@zIndex_4: 400;
-@zIndex_5: 500;
-@zIndex_6: 600;
-@zIndex_7: 700;
-@zIndex_8: 800;
-@zIndex_9: 900;
+@zIndex0: 0;
+@zIndex1: 100;
+@zIndex2: 200;
+@zIndex3: 300;
+@zIndex4: 400;
+@zIndex5: 500;
+@zIndex6: 600;
+@zIndex7: 700;
+@zIndex8: 800;
+@zIndex9: 900;
 
 .zIndex--0 {
-	z-index: @zIndex_0;
+	z-index: @zIndex0;
 }
 
 .zIndex--1 {
-  z-index: @zIndex_1;
+  z-index: @zIndex1;
 }
 
 .zIndex--2 {
-  z-index: @zIndex_2;
+  z-index: @zIndex2;
 }
 
 .zIndex--3 {
-  z-index: @zIndex_3;
+  z-index: @zIndex3;
 }
 
 .zIndex--4 {
-  z-index: @zIndex_4;
+  z-index: @zIndex4;
 }
 
 .zIndex--5 {
-  z-index: @zIndex_5;
+  z-index: @zIndex5;
 }
 
 .zIndex--6 {
-  z-index: @zIndex_6;
+  z-index: @zIndex6;
 }
 
 .zIndex--7 {
-  z-index: @zIndex_7;
+  z-index: @zIndex7;
 }
 
 .zIndex--8 {
-  z-index: @zIndex_8;
+  z-index: @zIndex8;
 }
 
 .zIndex--9 {
-  z-index: @zIndex_9;
+  z-index: @zIndex9;
 }
