LeftNav: add selected state

--- a/docs/LeftNavExample.less
+++ b/docs/LeftNavExample.less
@@ -2,9 +2,9 @@
 
 .LeftNavExample {
   border: 1px solid @neutral_gray;
-  height: 20rem;
+  height: 22rem;
 
   .LeftNavExample--rightPane {
-    .padding--m;
+    .padding--x--l;
   }
 }
