--- a/src/LeftNav/NavGroup.less
+++ b/src/LeftNav/NavGroup.less
@@ -1,15 +1,18 @@
 @import (reference) "../less/index.less";
 
 .NavGroup {
+  cursor: default;
   .NavGroup--label {
     .padding--x--l;
     .padding--top--m;
     .padding--bottom--s;
+    .text--semi-bold;
   }
   .NavLink {
     padding-left: @size_l + @size_m;
     .padding--y--s;
-    .text--small;
+    .text--medium;
+    .text--regular;
   }
   .NavGroup--icon {
     width: @size_m;
