LeftNav: add CollapsibleNavGroup

--- a/src/LeftNav/NavGroup.less
+++ b/src/LeftNav/NavGroup.less
@@ -8,14 +8,13 @@
     .padding--bottom--s;
     .text--semi-bold;
   }
+}
+
+.NavGroup--subnav {
   .NavLink {
-    padding-left: @size_l + @size_m;
+    padding-left: @size_l + @size_m; // label padding + icon padding
     .padding--y--s;
     .text--medium;
     .text--regular;
-  }
-  .NavGroup--icon {
-    width: @size_m;
-    .padding--right--xs;
   }
 }
