LeftNav: add DrawerNavGroup

--- a/src/LeftNav/LeftNav.less
+++ b/src/LeftNav/LeftNav.less
@@ -4,4 +4,6 @@
   color: @neutral_black;
   background: @neutral_silver;
   user-select: none;
+  // To support absolute positioning of the door in DrawerNavGroup
+  position: relative;
 }
