LefNav: flesh out drawer nav to collapse and expand

--- a/docs/LeftNavExample.less
+++ b/docs/LeftNavExample.less
@@ -4,7 +4,12 @@
   border: 1px solid @neutral_gray;
   height: 40rem;
 
-  .LeftNavExample--rightPane {
-    .padding--x--l;
-  }
+}
+
+.LeftNavExample--rightPane {
+  .padding--x--l;
+}
+
+.LeftNavExample--collapse {
+  .margin--bottom--l;
 }
