--- a/src/LeftNav/NavGroup.less
+++ b/src/LeftNav/NavGroup.less
@@ -10,11 +10,11 @@
   }
 }
 
-.NavGroup--subnav {
-  .NavLink {
-    padding-left: @size_l + @size_m; // label padding + icon padding
-    .padding--y--s;
-    .text--medium;
-    .text--regular;
+.NavGroup--open {
+  background: @neutral_dark_gray;
+  color: @neutral_white;
+  .NavLink:hover {
+    background: @neutral_dark_gray;
+    color: @neutral_white;
   }
 }
