Add light typeface (font-weight 200)

--- a/src/less/type-utilities.less
+++ b/src/less/type-utilities.less
@@ -6,6 +6,16 @@
 
 .text--decoration-none { text-decoration: none }
 
+.text--light {
+   font-weight: 200;;
+   font-style: normal;
+}
+
+.text--regular {
+   font-weight: normal;
+   font-style: normal;
+}
+
 .text--semi-bold    {
    font-weight: 600;
    font-style: normal;
@@ -13,11 +23,6 @@
 
 .text--bold    {
    font-weight: bold;
-   font-style: normal;
-}
-
-.text--regular { 
-   font-weight: normal;
    font-style: normal;
 }
 
