--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -1,21 +1,14 @@
 @font-face {
   font-family: 'Proxima Nova';
-  src: url('../../assets/fonts/ProximaNova-Bold-webfont.woff');
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Proxima Nova';
   src: url('../../assets/fonts/ProximaNova-Light-webfont.woff');
-  font-weight: 400;
+  font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Proxima Nova';
   src: url('../../assets/fonts/ProximaNova-Reg-webfont.woff');
-  font-weight: normal;
+  font-weight: normal; // 400
   font-style: normal;
 }
 
@@ -28,9 +21,9 @@
 
 @font-face {
   font-family: 'Proxima Nova';
-  src: url('../../assets/fonts/ProximaNova-RegItalic-webfont.woff');
-  font-weight: normal;
-  font-style: italic;
+  src: url('../../assets/fonts/ProximaNova-Bold-webfont.woff');
+  font-weight: bold; // 700
+  font-style: normal;
 }
 
 @font-face {
@@ -39,3 +32,11 @@
   font-weight: 900;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('../../assets/fonts/ProximaNova-RegItalic-webfont.woff');
+  font-weight: normal;
+  font-style: italic;
+}
+
