add tests for wizard, refinements based on them

--- a/src/Wizard/Wizard.less
+++ b/src/Wizard/Wizard.less
@@ -57,19 +57,17 @@
 
 .Wizard--stepsDisplay {
   flex: 1;
-  & > ul {
-    list-style-type: none;
-    padding: 0;
-  }
+  list-style-type: none;
+  padding: 0;
 }
 
 .Wizard--controls {
   flex: 0 1;
 }
 
-.Wizard--stepsDisplay--stepLink {
+.Wizard--stepsDisplay--stepLink.Button {
   width: 100%;
-  padding: 0 !important;
+  padding: 0;
 }
 
 .Wizard--stepsDisplay--step {
