--- a/src/Wizard/Wizard.less
+++ b/src/Wizard/Wizard.less
@@ -35,8 +35,7 @@
 }
 
 .Wizard--step {
-  flex: 1;
-  padding: 0 20px;
+  .flex(1);
 }
 
 .Wizard--WizardStep--title {
@@ -57,6 +56,16 @@
   .flex(1);
   list-style-type: none;
   .padding--none;
+
+  li {
+    &:not(:last-child)::after {
+      display: block;
+      content: "";
+      .border--left--s(@neutral_gray);
+      .margin--left--s;
+      height: @size_l;
+    }
+  }
 }
 
 .Wizard--controls {
@@ -73,6 +82,30 @@
   .flexbox();
   .alignItems(center);
   width: 100%;
+  .shade(color, @neutral_gray, 1);
+  .padding--y--2xs;
+
+  &.Wizard--stepsDisplay--visited {
+    color: inherit;
+  }
+
+  &.Wizard--stepsDisplay--visited {
+    .Wizard--stepsDisplay--icon {
+      background-image: url("../../assets/images/progress_notFinished.svg");
+    }
+  }
+
+  &.Wizard--stepsDisplay--valid {
+    .Wizard--stepsDisplay--icon {
+      background-image: url("../../assets/images/progress_done.svg");
+    }
+  }
+
+  &.Wizard--stepsDisplay--currentStep {
+    .Wizard--stepsDisplay--icon {
+      background-image: url("../../assets/images/progress_here.svg");
+    }
+  }
 }
 
 .Wizard--stepsDisplay--stepTitle {
@@ -83,32 +116,15 @@
   text-overflow: ellipsis;
 }
 
-.Wizard--stepsDisplay--currentStep, .Wizard--stepsDisplay--otherStep {
-  display: inline-block;
-  width: 1.5rem;
-  height: 1.5rem;
-}
-
-.Wizard--stepsDisplay--currentStep {
-  background: orange;
-}
-
 .Wizard--stepsDisplay--icon {
   display: inline-block;
   width: 1.5rem;
   height: 1.5rem;
-  background: gray;
-  .margin--2xs;
+  background-image: url("../../assets/images/progress_notStarted.svg");
+  background-repeat: no-repeat;
+  background-size: 1.5rem 1.5rem;
+  .margin--right--2xs;
 }
-
-.Wizard--stepsDisplay--visited {
-  background: blue;
-}
-
-.Wizard--stepsDisplay--valid {
-  background: green;
-}
-
 
 .Wizard--WizardStep--componentWrapper {
   .flexbox();
