--- a/src/ProgressBar/ProgressBar.less
+++ b/src/ProgressBar/ProgressBar.less
@@ -4,14 +4,15 @@
 .ProgressBar {
   position: relative;
   font-family: "Proxima Nova";
-  .border--m(@neutral_dark_gray);
+  .border--s(@neutral_gray);
+  @shade(border-color, @neutral_gray, 2);
   .borderRadius--m;
   .text--medium;
   background: @neutral_off_white;
 }
 
 .ProgressBar--up, .ProgressBar--down {
-  width: 30px;
+  width: @size_2xs;
   height: 100%;
   .ProgressBar--filledIn {
     transition: height 0.25s ease-out;
@@ -33,7 +34,7 @@
 }
 
 .ProgressBar--right, .ProgressBar--left {
-  height: 30px;
+  height: @size_2xs;
   .ProgressBar--filledIn {
     transition: width 0.25s ease-out;
     height: 100%;
