Modal: Set highest z-index.

--- a/src/Modal/Modal.less
+++ b/src/Modal/Modal.less
@@ -1,8 +1,9 @@
 @import "../less/fonts.less";
+@import "../less/z-index.less";
 
 .Modal {
   position: fixed;
-  z-index: 200;
+  z-index: @zIndex9;
 }
 
 .Modal--background {
